release: bump version to 1.0.8 and include latest jar